# NuFluxTools

./: CMakeLists.txt  LICENSE  README.md
cmake/: GENIESetup.cmake  ROOTSetup.cmake  c++CompilerSetup.cmake  dk2nuSetup.cmake  fhiclcppSetup.cmake  setup.sh.in
gdml/: CMakeLists.txt  SimpleBoxes.geom.manual.gdml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  NuFluxTools.cxx
src/app/tools/: CMakeLists.txt  Convert.cxx  INFTTool.hxx
src/exception/: exception.hxx
src/flux/: CMakeLists.txt  DecayParent.cxx  DecayParent.hxx  IDecayParentReader.hxx  INuRaySource.hxx  NuRayGun.hxx
src/flux/converters/: CMakeLists.txt  IFluxConverter.hxx  ToDk2Nu.cxx  ToGSimpleNtp.cxx
src/flux/input/: CMakeLists.txt  Dk2NuReader.cxx  dk2nuliteReader.cxx
src/geom/: BoundingCuboid.hxx  CMakeLists.txt  CoordinateTransformation.hxx  FluxWindow.hxx  IRandomVectors.hxx  Material.hxx  NuRay.hxx  NuRayPropagator.hxx  RandomConeDirection.hxx  RandomCuboidVolume.hxx  RandomRectangularPlane.hxx
src/material_weighting/: CMakeLists.txt  DensityWeighter.hxx  IMaterialWeighter.hxx  LinearXSecWeighter.hxx  WeightedRayPath.hxx
src/plugins/: CMakeLists.txt  Instantiate.hxx  LoadedPlugins.cxx  traits.hxx
src/rng/: CMakeLists.txt  IEnergyDistribution.hxx  IRandomVectors.hxx  RandomDirectionDistributions.hxx  RandomPositionDirections.hxx  RandomPositionDistributions.hxx  UniformEnergyDistribution.hxx
src/tests/: CMakeLists.txt  DumpTreadLoudlyPlots.cxx  FluxPred.cxx  RandomDirections.cxx  RandomFluxWindowPositions.cxx  RandomNuRays.cxx  RandomPositions.cxx  ResampleTreadLoudlyOutput.cxx  TreadLoudly.cxx
src/utils/: CMakeLists.txt  FileSystemUtils.cxx  FileSystemUtils.hxx  IEnergyDistribution.hxx  PDGUtils.hxx  Particle.hxx  ROOTUtils.hxx  RandomTools.hxx  StringUtils.cxx  StringUtils.hxx  T2Str.hxx  TerminalUtils.hxx  UniformEnergyDistribution.hxx
src/xsec/: CMakeLists.txt
